--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,16 @@
     <groupId>org.example</groupId>
     <artifactId>testExam</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <distributionManagement>
+         <repository>
+                  <id>deployment</id> 
+                  <name>Internal Snapshot Releases</name>
+                  <url>http://192.168.36.132:8081/repository/SAMPLE-REL/</url>
+         </repository>         
+         <snapshotRepository>
+                  <id>deployment</id>
+                  <name>Internal Snapshot Releases</name>
+                  <url>http://192.168.36.132:8081/repository/SAMPLE-SNAP/</url>
+         </snapshotRepository>
+    </distributionManagement>
 </project>
