--- a/apache.yml
+++ b/apache.yml
@@ -1,1 +1,9 @@
-
+---
+- host: webservers
+  become: true
+  task: 
+    - name: Install packages
+      apt:
+        name: "httpd"
+        state: "present"
+    - name: Start Apache server
