--- a/apache.yml
+++ b/apache.yml
@@ -7,3 +7,11 @@
         name: "httpd"
         state: "present"
     - name: Start Apache server
+      service: 
+        name: httpd
+        state: started
+        enable: True
+    - name: Deploy static website
+      copy:
+        src: index.html
+        dest: /var/www/html/
